# test

./: Makefile.am  Makefile.in  configure.ac  memo.c
calendar/: Makefile  Makefile.in  calendar.c
main/: Makefile  Makefile.in  main.c
memo/: Makefile  Makefile.am  memo.c
